projects/vb6parse/snapshots/parsers/cst/file_operations/reset/reset_at_module_level.snap
---
source: projects/vb6parse/tests/file_operations/reset.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: ResetStatement
      children:
        - kind: ResetKeyword
          text: Reset
    - kind: Newline
      text: "\n"
