projects/vb6parse/snapshots/parsers/cst/file_operations/reset/reset_preserves_whitespace.snap
---
source: projects/vb6parse/tests/file_operations/reset.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Whitespace
      text: "    "
    - kind: ResetStatement
      children:
        - kind: ResetKeyword
          text: Reset
        - kind: Whitespace
          text: "    "
    - kind: Newline
      text: "\n"
